Update Slack login flow to align with how Web App works today
I discovered that Slack has made some changes to how the login works (in terms
of hidden fields exposed/sent).

- login form now has a `has_remember` hidden field
- send the value indicating that we want to be remembered

This also updates the tests to appropriately exercise the code that handles
parsing those values out.

Signed-off-by: Tim Heckman <t@heckman.io>

--- a/testdata/login_details.html
+++ b/testdata/login_details.html
@@ -1,7 +1,8 @@
 <form id="signin_form" action="/" method="post" accept-encoding="UTF-8">
   <input type="hidden" name="signin" value="1">
   <input type="hidden" name="redir" value="/customize/emoji">
-  <input type="hidden" name="crumb" value="s-1523681453-a17c4e9381e3df00d5e13491ef4608bde2b0f4c7c185fe5ed080b2339920b2f3-☃" />
+  <input type="hidden" name="has_remember" value="2"> <!-- not the actual value presented by Slack -->
+  <input type="hidden" name="crumb" value="s-1523681453-a17c4e9381e3df00d5e13491ef4608bde2b0f4c7c185fe5ed080b2339920b2f3-☃">
   <p class="browser_password align_left">Enter your <strong>email address</strong> and <strong>password</strong>.</p>
   <p class="ssb_password hidden">What is your <strong>password</strong>?</p>
   <p class=" no_bottom_margin">
